# ophiuchi-desktop

./: .gitignore  LICENSE  README.md  components.json  package-lock.json  package.json  tailwind.config.ts
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bundle/templates/: default.nginx.conf.template  docker-compose.yml.template  server.conf.template
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/keychainmgr/: keychain_passwords.rs  mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/test/: route.ts
src/app/endpoint-list/: page.tsx
src/components/icons/: discord.tsx  docker.tsx
src/components/page-components/docker-control/: index.tsx
src/components/page-components/endpoint-list/: index.tsx
src/components/page-components/home/: index.tsx
src/components/page-components/proxy-list/: index.tsx
src/components/page-components/setup/: index.tsx
src/components/test-components/: password.tsx
src/components/ui/: button.tsx  code.tsx  command.tsx  dialog.tsx  input.tsx  multi-state-button.tsx  popover.tsx  table.tsx  tooltip.tsx
src/helpers/cert/: index.ts
src/helpers/certificate-manager/: index.ts
src/helpers/endpoint-manager/: index.ts
src/helpers/file-manager/: index.ts
src/helpers/proxy-manager/: constants.ts  index.ts  interfaces.ts
src/helpers/proxy-manager/migration/: 001-create-group.ts  002-add-proxy-created-at.ts
src/helpers/system/: index.ts
src/stores/: proxy-list.ts
update-check-v1/: latest.json
(+13 files in other folders)
