[package]
name = "app"
version = "0.2.2"
description = "Ophiuchi - Developers Toolkit"
authors = ["Jaeha Kim"]
license = "Private"
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.4.0", features = [ "fs-remove-file", "fs-remove-dir", "dialog-confirm", "shell-execute", "shell-open", "path-all", "fs-create-dir", "fs-exists", "fs-read-dir", "fs-read-file", "fs-copy-file", "fs-write-file"] }
sentry-tauri = "0.2"
chrono = "0.4.38"

[dependencies.fix-path-env]
git = "https://github.com/tauri-apps/fix-path-env-rs"
#tag = "fix-path-env-v0.1.0"
#branch = "dev"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
